--- a/assets/aldirblanc/customization.css
+++ b/assets/aldirblanc/customization.css
@@ -5,8 +5,8 @@
     --header-color: #ffffff;
 
     /* Footer */
-    --footer-background: #ffffff;
-    --footer-color: #111111;
+    --footer-background: #202047;
+    --footer-color: #ffffff;
 
     /* COMPONENTS */
     /* Button */
