CSS para adaptar o campo de Documentacao para a mediacao ao layout do site

--- a/assets-src/sass/2-atoms/_a-mixins.scss
+++ b/assets-src/sass/2-atoms/_a-mixins.scss
@@ -69,6 +69,11 @@ $desktop-width: 1025px;
 $large-width: 1600px;
 $medium-width: 1200px;
 
+@mixin mobile-only {
+    @media (max-width: 599px) {
+        @content;
+    }
+}
 
 @mixin mobile {
     @media (max-width: #{$tablet-width - 1px}) {
