--- a/assets-src/sass/4-components/_c-status-card.scss
+++ b/assets-src/sass/4-components/_c-status-card.scss
@@ -61,6 +61,22 @@
         line-height: 1.4;
         margin: 0;
         padding: 0;
+
+        a {
+            color: $light;
+            font-weight: bold;
+        }
+    }
+
+    hr {
+        border: 0;
+        border-top: 1px solid $light;
+        height: 0;
+        margin: 1.5rem 0;
+
+        &:nth-last-of-type(1) {
+            display: none;
+        }
     }
 
 }
