--- a/assets-src/sass/5-pages/_p-formulario.scss
+++ b/assets-src/sass/5-pages/_p-formulario.scss
@@ -130,7 +130,7 @@ article.registration {
             .each-line {
                 display: block;
                 margin-bottom: 15px;
-                overflow: hidden;
+                clear: both;
                 width: 100%;
 
                 span {
@@ -143,6 +143,17 @@ article.registration {
                         font-weight: bold;
                         margin-bottom: 5px;
                         width: 100%;
+                    }
+
+                    span.required {
+                        color: #C60931;
+                        float: right;
+                        font-size: 11px;
+                        font-weight: normal;
+                        letter-spacing: 0;
+                        line-height: 15px;
+                        text-transform: lowercase;
+                        padding-top: 3px;
                     }
                 }
 
