--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -35,6 +35,7 @@
 @import '5-pages/p-agentes-espacos';
 @import '5-pages/p-confirmacao';
 @import '5-pages/p-status';
+@import '5-pages/p-mediados-login';
 
 /* ----- 6: VENDORS ------- */
 // @import './../example-vendor/sss.css';
