traz chat para fente com zindex

--- a/assets-src/sass/3-layout/_l-footer.scss
+++ b/assets-src/sass/3-layout/_l-footer.scss
@@ -65,7 +65,9 @@ footer#main-footer {
         font-weight: bold;
     }
 }
-
+.zammad-chat{
+    z-index: 9999;
+}
 .terms-conditions{
     @include mobile {
         display: none;
