--- a/assets-src/sass/3-layout/_l-footer.scss
+++ b/assets-src/sass/3-layout/_l-footer.scss
@@ -66,7 +66,7 @@ footer#main-footer {
     }
 }
 .zammad-chat{
-    z-index: 9999;
+    z-index: 9999!important;
 }
 .terms-conditions{
     @include mobile {
