Adiciona funcao para mandar email e corrige variavel na view

--- a/views/aldirblanc/email-status.html
+++ b/views/aldirblanc/email-status.html
@@ -494,7 +494,7 @@
             <td>&nbsp;</td>
             <td class="container">
                 <div class="content">
-
+                    {{#urlImageToUseInEmails}}
                     <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                         <tr>
                             <td align="center" class="wrapper">
@@ -502,7 +502,8 @@
                             </td>
                         </tr>
                     </table>
-
+                    {{/urlImageToUseInEmails}}
+                    
                     <br>
                     <br>
 
@@ -519,24 +520,24 @@
 
                                             <p>Seguem as informações sobre a inscrição {{inscricao}}!</p>
 
-                                            <p>Você também pode visualizar o status da inscrição através do link: <a href="{{urlSite}}/aldirblanc/status/{{inscricao}}" target="_blank">Status da inscrição</a>.</p><br>
+                                            <p>Você também pode visualizar o status da inscrição através do link: <a href="{{baseUrl}}/aldirblanc/status/{{inscricao}}" target="_blank">Status da inscrição</a>.</p><br>
                                             <div class="status-card status-{{statusNum}}">
                                                 <h2 class="status-card--title">{{statusTitle}}</h2>
                                                 
                                                 {{#justificativaAvaliacao}}
-                                                    <p>{{justificativaAvaliacao}}</p>
+                                                    <p>{{{justificativaAvaliacao}}}</p>
                                                 {{/justificativaAvaliacao}}
                                                 {{#msgRecurso}}
                                                     <hr>
                                                     <h2 class="status-card--title">Você pode entrar com recurso</h2>
-                                                    <p class="status-card--content">{{msgRecurso}}</p>
+                                                    <p class="status-card--content">{{{msgRecurso}}}</p>
                                                 {{/msgRecurso}}
                                                 {{#emailRecurso}}
                                                     <p class="status-card--content">Caso queira solicitar recurso envie um email para <a href="mailto:{{emailRecurso}}">{{emailRecurso}}</a></p>
                                                 {{/emailRecurso}}
 
                                             </div><!-- /.status-card -->
-
+                                            <br><br>
                                             <p>Até mais!</p>
                                         </td>
                                     </tr>
