Altera template email ppg

--- a/views/aldirblanc/email-ppg.html
+++ b/views/aldirblanc/email-ppg.html
@@ -111,7 +111,7 @@
         h2,
         h3,
         h4 {
-            color: #000000;
+            color: #fff;
             font-family: sans-serif;
             font-weight: 400;
             line-height: 1.4;
@@ -522,9 +522,12 @@
 
                                             <p>Você também pode visualizar o status da inscrição através do link: <a href="{{baseUrl}}/aldirblanc/status/{{inscricao}}" target="_blank">Status da inscrição</a>.</p><br>
                                             <div class="status-card">
-                                                <h2 class="">Não forneça esses dados para ninguém.</h2>
+                                                <h2 class="">Não compartilhe esses dados.</h2>
                                                 <p>
-                                                    
+                                                    <b>Protocolo: </b> {{protocolo}}
+                                                </p>
+                                                <p>
+                                                    <b>Senha: </b> {{senha}}
                                                 </p>
                                             </div><!-- /.status-card -->
                                             <br><br>
