--- a/views/aldirblanc/email-ppg.html
+++ b/views/aldirblanc/email-ppg.html
@@ -516,11 +516,10 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td>
-                                            <p>Olá, {{user}}</p>
+                                            <p>Olá, {{user}}.</p>
 
-                                            <p>Seguem as informações sobre o pagamento da inscrição {{inscricao}}!</p>
+                                            <p>{{{mensagem}}}</p>
 
-                                            <p>Você também pode visualizar o status da inscrição através do link: <a href="{{baseUrl}}/aldirblanc/status/{{inscricao}}" target="_blank">Status da inscrição</a>.</p><br>
                                             <div class="status-card">
                                                 <h2 class="">Não compartilhe esses dados.</h2>
                                                 <p>
@@ -531,7 +530,7 @@
                                                 </p>
                                             </div><!-- /.status-card -->
                                             <br><br>
-                                            <p>Até mais!</p>
+                                            <p>Um abraço.</p>
                                         </td>
                                     </tr>
                                 </table>
