Ajustes de formatacao no CSS do e-mail recusadas

--- a/views/aldirblanc/email-recusadas.html
+++ b/views/aldirblanc/email-recusadas.html
@@ -167,7 +167,7 @@
         .btn table td {
             background-color: #ffffff;
             border-radius: 5px;
-text-align: center;
+            text-align: center;
         }
 
         .btn a {
@@ -329,8 +329,7 @@ text-align: center;
             padding: 20px 10px;
             color: #fff;
             display: block;
-            fon
-t-size: 1rem;
+            font-size: 1rem;
             line-height: 1.4;
             margin-bottom: 5px;
             margin-top: 5px;
@@ -476,8 +475,7 @@ t-size: 1rem;
                 line-height: inherit;
             }
 
-            .btn-primar
-y table td:hover {
+            .btn-primary table td:hover {
                 background-color: #34495e !important;
             }
 
