--- a/views/aldirblanc/email-recusadas.html
+++ b/views/aldirblanc/email-recusadas.html
@@ -516,7 +516,11 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td>
-                                            <p>Olá, {{user}}.</p>
+                                            <p>Olá, {{user}}.</p>                                            
+                                           
+                                            {{# avaliacoes }}
+                                            <p>{{{ . }}}</p>
+                                            {{/ avaliacoes }}
 
                                             <p>Você tem até o dia {{dataLimite}} para solicitar recurso da inscrição {{inscricao}}</p>
                                             
