Adiciona mensagens de->para das inscrições recusadas na página de status e edita mensagens de->para do e-mail

--- a/views/aldirblanc/email-recusadas.html
+++ b/views/aldirblanc/email-recusadas.html
@@ -516,13 +516,13 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td>
-                                            <p>Olá, {{user}}.</p>                                            
+                                            <p>Olá, <b>{{user}}</b>.</p>                                            
                                            
                                             {{# avaliacoes }}
                                             <p>{{{ . }}}</p>
                                             {{/ avaliacoes }}
 
-                                            <p>Você tem até o dia {{dataLimite}} para solicitar recurso da inscrição {{inscricao}}</p>
+                                            <p><b>Você tem até o dia {{dataLimite}} para solicitar recurso da inscrição {{inscricao}}</b></p>
                                             
                                             <br><br>
                                             <p>Um abraço.</p>
